Update Doctor Profile

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -122,7 +122,7 @@
                         <!-- Copyright Menu -->
                         <div class="copyright-menu ">
                             <ul class="policy-menu ">
-                                <li><a href="#">Covid 19 Information</a></li>
+                                <li><a (click)="footerRouter('/covid-guidelines')" href="javascript:void(0);">Covid 19 Information</a></li>
                                 <li><a href="#">Policy Ploicy</a></li>
                             </ul>
                         </div>
