--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -36,48 +36,47 @@
 
 
                 <nav class="tabs d-none d-md-block">
-                    <div class="selector"></div>
-                    <a href="#" (click)="navigateHeader('about-us')">Who we are</a>
-                    <!-- <a href="#">Oral Test</a> -->
-                    <!-- <a href="#">How We Can Help</a> -->
-                    <a href="#" (click)="navigateHeader('info-bytes')">Info Bytes</a>
-                    <a href="#" (click)="navigateHeader('contact-us')">Contact Us</a>
-                    <!-- <a href="#"> find a clinic</a> -->
+
+                    <div class="selector" id="webmenu"></div>
+                    <a href="#" class="active" id="home"  (click)="navigateHeader('index')">Home</a>
+                    <a href="#" id="about" (click)="navigateHeader('about-us')">Who we are</a>
+                    <a href="#" id="bytes" (click)="navigateHeader('info-bytes')">Info Bytes</a>
+                    <a href="#" id="contact" (click)="navigateHeader('contact-us')">Contact Us</a>
+                    <a href="#" id="covid" (click)="navigateHeader('covid-guidelines')">Covid</a>
 
                 </nav>
 
-                <!-- <ul class="main-nav ">
-                    <li class="login-link">
-                        <a href="about.html">Who we are </a>
-
-                    </li>
-                    <li class="login-link">
-                        <a href="#"> Oral Test</a>
-
-                    </li>
-
+                <ul class="main-nav ">
 
                     <li class="login-link">
-                        <a href="#">How We Can Help </a>
-
+                        <a href="#" (click)="navigateHeader('index')">Home</a>
                     </li>
 
                     <li class="login-link">
-                        <a href="#"> Info Bytes</a>
-
-                    </li>
-                    <li class="login-link">
-                        <a href="#"> find a clinic</a>
-
+                        <a href="#" (click)="navigateHeader('about-us')">Who we are</a>
                     </li>
 
                     <li class="login-link">
-                        <a href="login.html">BOOK AN APPOINTMENT </a>
+                        <a href="#" (click)="navigateHeader('info-bytes')">Info Bytes</a>
                     </li>
+
+                    <li class="login-link">
+                        <a href="#" (click)="navigateHeader('contact-us')">Contact Us</a>
+                    </li>
+
+                    <li class="login-link">
+                        <a href="#" (click)="navigateHeader('covid-guidelines')">Covid - 19</a>
+                    </li>
+
+                    <li class="login-link">
+                        <a href="javascript:void(0);" (click) = "navigateHeader('/online-consultation?limit=10&skip=0')">BOOK AN APPOINTMENT </a>
+                    </li>
+
                     <li class="login-link">
                         <a href="login.html">Login </a>
                     </li>
-                </ul> -->
+
+                </ul>
             </div>
 
              <ul class="nav header-navbar-rht">
