--- a/src/app/module/booking/booking.component.html
+++ b/src/app/module/booking/booking.component.html
@@ -1,14 +1,9 @@
+<ngx-ui-loader [loaderId]="'loader-01'"></ngx-ui-loader>
 <!-- Breadcrumb -->
 <div class="breadcrumb-bar">
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-md-12 col-12">
-				<nav aria-label="breadcrumb" class="page-breadcrumb">
-					<ol class="breadcrumb">
-						<li class="breadcrumb-item"><a href="index-2.html">Home</a></li>
-						<li class="breadcrumb-item active" aria-current="page">Booking</li>
-					</ol>
-				</nav>
 				<h2 class="breadcrumb-title">Booking</h2>
 			</div>
 		</div>
@@ -27,7 +22,7 @@
 					<div class="card-body">
 						<div class="booking-doc-info">
 							<a href="doctor-profile.html" class="booking-doc-img">
-								<img src="assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
+								<img src="{{doctorDetail?.imageUrl}}" alt="User Image">
 							</a>
 							<div class="booking-info">
 								<h4><a href="doctor-profile.html">{{doctorDetail?.name}}</a></h4>
