Add Cirlce progress

--- a/src/app/module/doctors-panel/doctor-dashboard/doctor-dashboard.component.html
+++ b/src/app/module/doctors-panel/doctor-dashboard/doctor-dashboard.component.html
@@ -30,12 +30,18 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-12 col-lg-4">
+
                                         <div class="dash-widget dct-border-rht">
-                                            <div class="circle-bar circle-bar1">
-                                                <div class="circle-graph1" data-percent="75">
-                                                    <img src="assets/img/icon-01.png" class="img-fluid" alt="patient">
-                                                </div>
+                                            <div class="circle-bar">
+                                                <circle-progress [percent]="75" [radius]="40" [space]="-5"
+                                                    [outerStrokeWidth]="5" [outerStrokeColor]="'#da3f81'"
+                                                    [innerStrokeColor]="'#ffffff'" [innerStrokeWidth]="5"
+                                                    [imageSrc]="'assets/img/icon-01.png'" [animation]="true"
+                                                    [showImage]="true" [imageHeight]="35" [imageWidth]="35"
+                                                    [showBackground]="false" [animationDuration]="1100">
+                                                </circle-progress>
                                             </div>
+
                                             <div class="dash-widget-info">
                                                 <h6>Total Patient</h6>
                                                 <h3>1500</h3>
@@ -46,10 +52,14 @@
 
                                     <div class="col-md-12 col-lg-4">
                                         <div class="dash-widget dct-border-rht">
-                                            <div class="circle-bar circle-bar2">
-                                                <div class="circle-graph2" data-percent="65">
-                                                    <img src="assets/img/icon-02.png" class="img-fluid" alt="Patient">
-                                                </div>
+                                            <div class="circle-bar">
+                                                <circle-progress [percent]="30" [radius]="40" [space]="-5"
+                                                    [outerStrokeWidth]="5" [outerStrokeColor]="'#68dda9'"
+                                                    [innerStrokeColor]="'#ffffff'" [innerStrokeWidth]="5"
+                                                    [imageSrc]="'assets/img/icon-02.png'" [animation]="true"
+                                                    [showImage]="true" [imageHeight]="35" [imageWidth]="35"
+                                                    [showBackground]="false" [animationDuration]="1100">
+                                                </circle-progress>
                                             </div>
                                             <div class="dash-widget-info">
                                                 <h6>Today Patient</h6>
@@ -61,10 +71,14 @@
 
                                     <div class="col-md-12 col-lg-4">
                                         <div class="dash-widget">
-                                            <div class="circle-bar circle-bar3">
-                                                <div class="circle-graph3" data-percent="50">
-                                                    <img src="assets/img/icon-03.png" class="img-fluid" alt="Patient">
-                                                </div>
+                                            <div class="circle-bar">
+                                                <circle-progress [percent]="22" [radius]="40" [space]="-5"
+                                                    [outerStrokeWidth]="5" [outerStrokeColor]="'#1b5a90'"
+                                                    [innerStrokeColor]="'#ffffff'" [innerStrokeWidth]="5"
+                                                    [imageSrc]="'assets/img/icon-03.png'" [animation]="true"
+                                                    [showImage]="true" [imageHeight]="35" [imageWidth]="35"
+                                                    [showBackground]="false" [animationDuration]="1100">
+                                                </circle-progress>
                                             </div>
                                             <div class="dash-widget-info">
                                                 <h6>Appoinments</h6>
