--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -109,7 +109,7 @@
                         </div>
                         <a class="dropdown-item pointer">Dashboard</a>
                         <a class="dropdown-item pointer">Profile Settings</a>
-                        <a class="dropdown-item pointer"  (click)="logout()">Logout</a>
+                        <a class="dropdown-item pointer" id="logoutCall"  (click)="logout()">Logout</a>
                     </div>
                 </li>
                 <!-- /User Menu -->
