get profile details setting

--- a/src/app/module/doctors-panel/profile-setting/profile-setting.component.html
+++ b/src/app/module/doctors-panel/profile-setting/profile-setting.component.html
@@ -1,3 +1,6 @@
+<ngx-ui-loader [loaderId]="'loader-02'"></ngx-ui-loader>
+
+
 <!-- Breadcrumb -->
 <div class="breadcrumb-bar">
     <div class="container-fluid">
