--- a/src/app/module/doctors-panel/change-password/change-password.component.html
+++ b/src/app/module/doctors-panel/change-password/change-password.component.html
@@ -1,3 +1,5 @@
+<ngx-ui-loader [loaderId]="'loader-02'"></ngx-ui-loader>
+
 <!-- Breadcrumb -->
 <div class="breadcrumb-bar">
     <div class="container-fluid">
@@ -28,21 +30,35 @@
                             <div class="col-md-12 col-lg-6">
                             
                                 <!-- Change Password Form -->
-                                <form>
+                                <form [formGroup]="setPassForm">
                                     <div class="form-group">
-                                        <label>Old Password</label>
-                                        <input type="password" class="form-control">
+                                        <label>Old Password <span class="text-danger">*</span></label>
+                                        <input type="password" class="form-control" formControlName="oldPassword">
+                                        <div *ngIf="submitted && validation.oldPassword.errors" class="invalid-feedback">
+                                            <div *ngIf="validation.oldPassword.errors.required">Old Password is Mandatory
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="form-group">
-                                        <label>New Password</label>
-                                        <input type="password" class="form-control">
+                                        <label>New Password <span class="text-danger">*</span></label>
+                                        <input type="password" class="form-control" formControlName="password">
+                                        <div *ngIf="submitted && validation.password.errors" class="invalid-feedback">
+                                            <div *ngIf="validation.password.errors.required">New Password is Mandatory
+                                            </div>
+                                        <div *ngIf="validation.password.errors.pattern">Password Must Contain atleast One Alphabet, One Special Character and number. Atleast Password Length is 8</div>
+                                        </div>
                                     </div>
                                     <div class="form-group">
-                                        <label>Confirm Password</label>
-                                        <input type="password" class="form-control">
+                                        <label>Confirm Password <span class="text-danger">*</span></label>
+                                        <input type="password" class="form-control" formControlName="passwordConfirmation">
+                                        <div *ngIf="submitted && validation.passwordConfirmation.errors" class="invalid-feedback">
+                                            <div *ngIf="validation.passwordConfirmation.errors.required">Password Confirmation is Mandatory
+                                            </div>
+                                            <div *ngIf="validation.passwordConfirmation.errors.mustMatch">Password Mismatch</div>
+                                        </div>
                                     </div>
                                     <div class="submit-section">
-                                        <button type="submit" class="btn btn-primary submit-btn">Save Changes</button>
+                                        <button type="submit" class="btn btn-primary submit-btn" (click)="submitForm()">Save Changes</button>
                                     </div>
                                 </form>
                                 <!-- /Change Password Form -->
