--- a/src/app/module/doctors-panel/appointments/appointments.component.html
+++ b/src/app/module/doctors-panel/appointments/appointments.component.html
@@ -69,6 +69,7 @@
                             </a>
                             <a
                             *ngIf="list.currentStatus === 'Accept' " 
+                            (click)="updateStatus('reallocate', list._id)"
                             href="javascript:void(0);" 
                             class="btn btn-sm bg-danger-light">
                                 <i class="fas fa-times"></i> ReSchedule
