--- a/src/app/module/patient-panel/patient-dashboard/patient-dashboard.component.html
+++ b/src/app/module/patient-panel/patient-dashboard/patient-dashboard.component.html
@@ -91,8 +91,22 @@
                                                             </div>
                                                         </td>
                                                     </tr>
+                                                    <tr *ngIf="dashboardData.length === 0">
+                                                        <td class="text-center" colspan="6">
+                                                            <h3>Appointments not found</h3>
+                                                        </td>
+                                                    </tr>
                                                 </tbody>
                                             </table>
+                                        </div>
+                                        <div class="row result-str" *ngIf="dashboardData.length !== 0">
+                                            <div class="col-sm-12 col-md-5 ">
+                                                <p> {{ (currentPage-1) * perPage + 1 }} to {{ math.min((currentPage * perPage), dashboardData.length) }} of {{ dashboardData.length }} entries </p>
+                                            </div>
+                                            <div class="col-sm-12 col-md-7 text-right">
+                                                <pagination-controls [directionLinks]="directionLinks" [autoHide]="autoHide" [responsive]="responsive" [previousLabel]="labels.previousLabel" [nextLabel]="labels.nextLabel" (pageChange)="onPageChange($event)" id="first">
+                                                </pagination-controls>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
