--- a/src/app/module/patient-panel/reschedule-appointment/reschedule-appointment.component.html
+++ b/src/app/module/patient-panel/reschedule-appointment/reschedule-appointment.component.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row align-items-center">
             <div class="col-md-12 col-12">
-                <h2 class="breadcrumb-title">Booking</h2>
+                <h2 class="breadcrumb-title">Reschedule Appointment</h2>
             </div>
         </div>
     </div>
