--- a/src/app/module/patient-panel/patient-profile-settings/patient-profile-settings.component.html
+++ b/src/app/module/patient-panel/patient-profile-settings/patient-profile-settings.component.html
@@ -1,3 +1,5 @@
+<ngx-ui-loader [loaderId]="'loader-02'"></ngx-ui-loader>
+
 <!-- Breadcrumb -->
 <div class="breadcrumb-bar">
     <div class="container-fluid">
@@ -14,19 +16,19 @@
 <div class="content">
     <div class="container-fluid">
         <div class="row">
-        
+
             <!-- Profile Sidebar -->
             <div class="col-md-5 col-lg-4 col-xl-3 theiaStickySidebar">
-              <app-patient-sidebar></app-patient-sidebar>
+                <app-patient-sidebar></app-patient-sidebar>
             </div>
             <!-- /Profile Sidebar -->
-            
+
             <div class="col-md-7 col-lg-8 col-xl-9">
                 <div class="card">
                     <div class="card-body">
-                        
+
                         <!-- Profile Settings Form -->
-                        <form>
+                        <form [formGroup]="profileForm" (ngSubmit)="submitForm()">
                             <div class="row form-row">
                                 <div class="col-12 col-md-12">
                                     <div class="form-group">
@@ -46,79 +48,101 @@
                                 </div>
                                 <div class="col-12 col-md-6">
                                     <div class="form-group">
-                                        <label>First Name</label>
-                                        <input type="text" class="form-control" value="Richard">
+                                        <label>First Name </label>
+                                        <input type="text" class="form-control" formControlName="firstName">
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-6">
                                     <div class="form-group">
-                                        <label>Last Name</label>
-                                        <input type="text" class="form-control" value="Wilson">
+                                        <label>Last Name </label>
+                                        <input type="text" class="form-control" formControlName="lastName">
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-6">
                                     <div class="form-group">
-                                        <label>Date of Birth</label>
-                                        <div class="cal-icon">
-                                            <input type="text" class="form-control datetimepicker" value="24-07-1983">
+                                        <label>Date of Birth </label>
+                                        <input type="text" class="form-control" [ngClass]="submitted && validation.dob.errors ? 'is-invalid' : ''" formControlName="dob" bsDatepicker [bsConfig]="{ containerClass : 'theme-blue', dateInputFormat:'MM-DD-YYYY', isAnimated:true, showWeekNumbers:false }"
+                                            (bsValueChange)="onDateSelect($event)">
+                                        <div *ngIf="submitted && validation.dob.errors" class="invalid-feedback">
+                                            <div *ngIf="validation.dob.errors && !validation.dob.errors.required">
+                                                Invalid Date</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <div class="col-12 col-md-6">
+                                    <div class="form-group">
+                                        <label>Gender <span class="text-danger">*</span></label>
+                                        <select class="form-control custom-select" formControlName="gender">
+                                            <option value="N/A">Select</option>
+                                            <option value="Male">Male</option>
+                                            <option value="Female">Female</option>
+                                            <option value="Others">Others</option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <div class="col-12 col-md-6">
+                                    <div class="form-group">
+                                        <label>Email ID</label>
+                                        <input type="text" class="form-control" [ngClass]="submitted && validation.email.errors ? 'is-invalid' : ''" formControlName="email" readonly>
+                                        <div *ngIf="submitted && validation.email.errors" class="invalid-feedback">
+                                            <div *ngIf="validation.email.errors.pattern">Invalid Email</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-6">
                                     <div class="form-group">
-                                        <label>Blood Group</label>
-                                        <select class="form-control select">
-                                            <option>A-</option>
-                                            <option>A+</option>
-                                            <option>B-</option>
-                                            <option>B+</option>
-                                            <option>AB-</option>
-                                            <option>AB+</option>
-                                            <option>O-</option>
-                                            <option>O+</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6">
-                                    <div class="form-group">
-                                        <label>Email ID</label>
-                                        <input type="email" class="form-control" value="richard@example.com">
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6">
-                                    <div class="form-group">
                                         <label>Mobile</label>
-                                        <input type="text" value="+1 202-555-0125" class="form-control">
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-group">
-                                    <label>Address</label>
-                                        <input type="text" class="form-control" value="806 Twin Willow Lane">
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6">
-                                    <div class="form-group">
-                                        <label>City</label>
-                                        <input type="text" class="form-control" value="Old Forge">
+                                        <ngx-intl-tel-input [cssClass]="submitted && validation.phone.errors ? 'form-control is-invalid' : 'form-control'" [enableAutoCountrySelect]="false" [enablePlaceholder]="true" [searchCountryFlag]="true" [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name, SearchCountryField.DialCode]"
+                                            [selectFirstCountry]="false" [selectedCountryISO]="setCountry" [tooltipField]="TooltipLabel.Name" [phoneValidation]="true" [separateDialCode]="separateDialCode" name="phone" formControlName="phone">
+                                        </ngx-intl-tel-input>
+                                        <div *ngIf="submitted && validation.phone.errors" class="invalid-feedback">
+                                            <div *ngIf="validation.phone.errors.required">Phone no. is Mandatory</div>
+                                            <div *ngIf="validation.phone.invalid && !validation.phone.errors.required">
+                                                Invalid Phone No.</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-6">
                                     <div class="form-group">
-                                        <label>State</label>
-                                        <input type="text" class="form-control" value="Newyork">
+                                        <label>Address Line 1 </label>
+                                        <input type="text" class="form-control" formControlName="addressLine1">
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-6">
                                     <div class="form-group">
-                                        <label>Zip Code</label>
-                                        <input type="text" class="form-control" value="13420">
+                                        <label>Address Line 2 </label>
+                                        <input type="text" class="form-control" formControlName="addressLine2">
+
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-6">
                                     <div class="form-group">
-                                        <label>Country</label>
-                                        <input type="text" class="form-control" value="United States">
+                                        <label>City </label>
+                                        <input type="text" class="form-control" formControlName="city">
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="form-group">
+                                        <label>State </label>
+                                        <input type="text" class="form-control" formControlName="state">
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="form-group">
+                                        <label>Zip Code </label>
+                                        <input type="text" class="form-control" formControlName="zipcode" [ngClass]="submitted && validation.zipcode.errors ? 'is-invalid' : ''">
+                                        <div *ngIf="submitted && validation.zipcode.errors" class="invalid-feedback">
+                                            <div *ngIf="validation.zipcode.errors.pattern">Invalid zip code</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="form-group">
+                                        <label>Country </label>
+                                        <input type="text" class="form-control" formControlName="country">
                                     </div>
                                 </div>
                             </div>
@@ -127,12 +151,12 @@
                             </div>
                         </form>
                         <!-- /Profile Settings Form -->
-                        
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-</div>		
+</div>
 <!-- /Page Content -->
