--- a/src/app/module/patient-panel/patient-sidebar/patient-sidebar.component.html
+++ b/src/app/module/patient-panel/patient-sidebar/patient-sidebar.component.html
@@ -2,14 +2,14 @@
     <div class="profile-sidebar">
         <div class="widget-profile pro-widget-content">
             <div class="profile-info-widget">
-                <a href="#" class="booking-doc-img">
-                    <img src="assets/img/patients/patient.jpg" alt="User Image">
+                <a href="javascript:void(0);" class="booking-doc-img">
+                    <img src="{{userDetails?.imageUrl}}" alt="User Image">
                 </a>
                 <div class="profile-det-info">
-                    <h3>Richard Wilson</h3>
+                    <h3>{{userDetails?.firstName}} {{userDetails?.lastName}}</h3>
                     <div class="patient-details">
-                        <h5><i class="fas fa-birthday-cake"></i> 24 Jul 1983, 38 years</h5>
-                        <h5 class="mb-0"><i class="fas fa-map-marker-alt"></i> Newyork, USA</h5>
+                        <h5 *ngIf="age !== undefined"><i class="fas fa-birthday-cake"></i> {{userDetails?.dob | date: 'dd MMM yyyy'}}, {{age}} years</h5>
+                        <h5 *ngIf="city !==undefined && state !== undefined" class="mb-0"><i class="fas fa-map-marker-alt"></i> {{city}}, {{state}}</h5>
                     </div>
                 </div>
             </div>
