--- a/src/app/module/doctors-panel/doctor-sidebar/doctor-sidebar.component.html
+++ b/src/app/module/doctors-panel/doctor-sidebar/doctor-sidebar.component.html
@@ -3,13 +3,13 @@
     <div class="widget-profile pro-widget-content">
         <div class="profile-info-widget">
             <a href="#" class="booking-doc-img">
-                <img src="assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
+                <img src="{{userDetails?.imageUrl}}" alt="User Image">
             </a>
             <div class="profile-det-info">
                 <h3>Dr. Darren Elder</h3>
 
                 <div class="patient-details">
-                    <h5 class="mb-0">BDS, MDS - Oral & Maxillofacial Surgery</h5>
+                    <h5 class="mb-0">{{userDetails?.education}}</h5>
                 </div>
             </div>
         </div>
