manage jwt functionality

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -141,8 +141,8 @@
 <!-- /Footer -->
 
 
-          <!-- whatsapp chat  -->
-          <div class="fixedbutton">
+<!-- whatsapp chat  -->
+<!-- <div class="fixedbutton">
             <img src="assets/img/whatapp.png">
-          </div>
-          <!-- /whatsapp chat  -->
+          </div> -->
+<!-- /whatsapp chat  -->
