--- a/src/app/module/online-consultation/online-consultation.component.html
+++ b/src/app/module/online-consultation/online-consultation.component.html
@@ -66,13 +66,7 @@
                             </div>
                         </div>
                         <div class="btn-search">
-                            <button 
-                            [ngClass]="isDisabledClassActive === true ? 'disabled' : '' " 
-                            type="button" 
-                            id="filterSearch" 
-                            class="btn btn-block"
-                            (click)="filterDoctor()"
-                            >Search</button>
+                            <button [ngClass]="isDisabledClassActive === true ? 'disabled' : '' " type="button" id="filterSearch" class="btn btn-block" (click)="filterDoctor()">Search</button>
                         </div>
                     </div>
                 </div>
@@ -83,23 +77,21 @@
             <div class="col-md-12 col-lg-8 col-xl-9">
 
                 <!-- Doctor Widget -->
-                <div class="card" *ngFor="let doctor of userDoctorList">
+                <div class="card" *ngFor="let doctor of userDoctorList | paginate: { itemsPerPage: limit, currentPage: pageNum }">
                     <div class="card-body">
                         <div class="doctor-widget">
                             <div class="doc-info-left">
                                 <div class="doctor-img">
                                     <a routerLink="/doctor-profile">
-                                        <img src="{{doctor?.imageUrl}}" class="img-fluid"
-                                            alt="User Image">
-                                        </a>
+                                        <img src="{{doctor?.imageUrl}}" class="img-fluid" alt="User Image">
+                                    </a>
                                 </div>
                                 <div class="doc-info-cont">
                                     <h4 class="doc-name">
                                         <a routerLink="#">{{doctor?.name}}</a>
                                     </h4>
                                     <p class="doc-speciality">{{doctor?.education}}</p>
-                                    <h5 class="doc-department"><img src="assets/img/specialities/specialities-05.png"
-                                            class="img-fluid" alt="Speciality">{{doctor?.dentistType}}</h5>
+                                    <h5 class="doc-department"><img src="assets/img/specialities/specialities-05.png" class="img-fluid" alt="Speciality">{{doctor?.dentistType}}</h5>
                                     <div class="rating">
                                         <i *ngIf="doctor?.rating === 1 || doctor?.rating > 1" class="fas fa-star filled"></i>
                                         <i *ngIf="doctor?.rating < 1" class="fas fa-star"></i>
@@ -130,8 +122,7 @@
                                     <ul>
                                         <li><i class="far fa-thumbs-up"></i> {{doctor?.ratingPercentage}}%</li>
                                         <li><i class="fas fa-map-marker-alt"></i> {{doctor?.city}}, {{doctor?.state}}</li>
-                                        <li><i class="far fa-money-bill-alt"></i> ₹{{doctor?.price}} <i class="fas fa-info-circle"
-                                                data-toggle="tooltip" title="Per Visit"></i> </li>
+                                        <li><i class="far fa-money-bill-alt"></i> ₹{{doctor?.price}} <i class="fas fa-info-circle" data-toggle="tooltip" title="Per Visit"></i> </li>
                                     </ul>
                                 </div>
                                 <div class="clinic-booking">
@@ -144,8 +135,14 @@
                 </div>
                 <!-- /Doctor Widget -->
 
-                <div class="load-more text-center">
-                    <a class="btn btn-primary btn-sm" href="javascript:void(0);">Load More</a>
+                <div class="row result-str">
+                    <!-- <div class="col-sm-12 col-md-5 ">
+                            <p> {{ (pageNum-1) * limit + 1 }} to {{ math.min((pageNum * limit), userDoctorList.length) }} of {{ appointmentList.length }} entries </p>
+                        </div> -->
+                    <div class="col-sm-12 col-md-12 text-left">
+                        <pagination-controls [directionLinks]="directionLinks" [autoHide]="autoHide" [responsive]="responsive" [previousLabel]="labels.previousLabel" [nextLabel]="labels.nextLabel" (pageChange)="onPageChange($event)">
+                        </pagination-controls>
+                    </div>
                 </div>
             </div>
         </div>
