Update info bytes

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -17,7 +17,8 @@
                             <!-- <img src="assets/img/teladent_2.png " alt="logo "> -->
                         </div>
                         <div class="footer-about-content ">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <p>Indi’s first tele dentistry platform that provides virtual advice and expert opinion for all your
+                                dental problems.</p>
                             <div class="social-icon ">
                                 <ul>
                                     <li>
@@ -88,10 +89,11 @@
                                 <p> 3556 Beech Street, San Francisco,<br> California, CA 94108 </p>
                             </div>
                             <p>
-                                <i class="fas fa-phone-alt "></i> +1 315 369 5943
+                                <!-- <i class="fas fa-phone-alt "></i> +1 315 369 5943 -->
+                                <i class="fas fa-phone-alt "></i> +91 9899799981
                             </p>
                             <p class="mb-0 ">
-                                <i class="fas fa-envelope "></i> acb@example.com
+                                <i class="fas fa-envelope "></i> teladentist@gmail.com
                             </p>
 
                         </div>
