--- a/src/app/module/infobytes/infobytes.component.html
+++ b/src/app/module/infobytes/infobytes.component.html
@@ -33,77 +33,45 @@
                             <div class="round"></div>
                             <div class="dotCircle" stylesa="transform: rotate(252deg); transition: all 2s ease 0s;">
                                 <div class="itemDot itemDot1" data-tab="1">
-                                    <img src="assets/img/root canel.jpg" alt="root canal">
+                                    <img src="assets/img/1.jpg" alt="root canal">
                                     <span class="forActive"></span>
                                 </div>
                                 <div class="itemDot itemDot2" data-tab="2">
-                                    <img src="assets/img/root canel.jpg" alt="heateher-min">
+                                    <img src="assets/img/2.jpg" alt="heateher-min">
                                     <span class="forActive"></span>
                                 </div>
                                 <div class="itemDot itemDot3" data-tab="3">
-                                    <img src="assets/img/root canel.jpg" alt="richard">
+                                    <img src="assets/img/3.jpg" alt="richard">
                                     <span class="forActive"></span>
                                 </div>
                                 <div class="itemDot itemDot4 active" data-tab="4">
-                                    <img src="assets/img/root canel.jpg" alt="JSimone">
+                                    <img src="assets/img/4.jpg" alt="JSimone">
                                     <span class="forActive"></span>
                                 </div>
-                                <div class="itemDot itemDot5" data-tab="5">
-                                    <img src="assets/img/root canel.jpg" alt="lola.">
-                                    <span class="forActive"></span>
-                                </div>
-                                <div class="itemDot itemDot6" data-tab="6">
-                                    <img src="assets/img/root canel.jpg" alt="richard">
-                                    <span class="forActive"></span>
-                                </div>
-                                <!-- <div class="itemDot itemDot7" data-tab="7" >
-                                    <img src="https://11fo813dsg4jqjl4374eoxz8-wpengine.netdna-ssl.com/wp-content/themes/wc-marketplace/assets/frontend/img/home/heateher-min.jpg" alt="heateher-min">
-                                    <span class="forActive"></span>
-                                </div> -->
 
                             </div>
                             <div class="content-star"></div>
                             <div class="contentCircle">
                                 <div class="CirItem title-box CirItem1">
-                                    <h4 class="title">Root Canal</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in quam et quam molestie scelerisque vel non dui. Cras augue est, finibus id mi ac, rutrum interdum metus. Lorem ipsum dolor sit amet, consectetur
-                                        adipiscing elit. Nam in quam et quam molestie scelerisque vel non dui. Cras augue est, finibus id mi ac, rutrum interdum metus. </p>
+                                    <h4 class="title">ROOT CANAL</h4>
+                                    <p>Root canal is a treatment to repair and save a severely damaged or infected tooth, instead of removing it.</p>
                                     <i class="fa fa-clock-o"></i>
                                 </div>
                                 <div class="CirItem title-box CirItem2">
-                                    <h4 class="title">Root Canal</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in quam et quam molestie scelerisque vel non dui. Cras augue est, finibus id mi ac, rutrum interdum metus. Lorem ipsum dolor sit amet, consectetur
-                                        adipiscing elit. Nam in quam et quam molestie scelerisque vel non dui. Cras augue est, finibus id mi ac, rutrum interdum metus. </p>
+                                    <h4 class="title">DENTAL IMPLANTS</h4>
+                                    <p>It is a surgical fixture that is placed into the jawbone and allowed to fuse with the bone over the span of a few months.</p>
                                     <i class="fa fa-comments"></i>
                                 </div>
                                 <div class="CirItem title-box CirItem3">
-                                    <h4 class="title">Root Canal</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in quam et quam molestie scelerisque vel non dui. Cras augue est, finibus id mi ac, rutrum interdum metus. </p>
+                                    <h4 class="title">BRACES</h4>
+                                    <p>Dental braces are appliances which are used to align or straighten the teeth and guide the teeth to the corrected position.</p>
                                     <i class="fa fa-user"></i>
                                 </div>
                                 <div class="CirItem title-box CirItem4 active">
-                                    <h4 class="title">Root Canal</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in quam et quam molestie scelerisque vel non dui. Cras augue est, finibus id mi ac, rutrum interdum metus. Lorem ipsum dolor sit amet, consectetur
-                                        adipiscing elit. Nam in quam et quam molestie scelerisque vel non dui. Cras augue est, finibus id mi ac, rutrum interdum metus. </p>
+                                    <h4 class="title">CROWNS and BRIDGES</h4>
+                                    <p>Crowns and bridges are fixed dental restorations which are used for restoration or replacement of missing natural teeth, respectively.</p>
                                     <i class="fa fa-tags"></i>
                                 </div>
-                                <div class="CirItem title-box CirItem5">
-                                    <h4 class="title">Root Canal</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in quam et quam molestie scelerisque vel non dui. Cras augue est, finibus id mi ac, rutrum interdum metus. </p>
-                                    <i class="fa fa-upload"></i>
-                                </div>
-
-                                <div class="CirItem title-box CirItem6">
-                                    <h4 class="title">Root Canal</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in quam et quam molestie scelerisque vel non dui. Cras augue est, finibus id mi ac, rutrum interdum metus. Lorem ipsum dolor sit amet, consectetur
-                                        adipiscing elit. Nam in quam et quam molestie scelerisque vel non dui. Cras augue est, finibus id mi ac, rutrum interdum metus. </p>
-                                    <i class="fa fa-briefcase"></i>
-                                </div>
-                                <!-- <div class="CirItem title-box CirItem7">
-                                    <h4 class="title">Lola</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in quam et quam molestie scelerisque vel non dui. Cras augue est, finibus id mi ac, rutrum interdum metus. </p>
-                                    <i class="fa fa-upload"></i>
-                                </div> -->
                             </div>
                         </div>
                     </div>
