--- a/src/app/module/about-us/about-us.component.html
+++ b/src/app/module/about-us/about-us.component.html
@@ -26,10 +26,14 @@
             <div class="container text-center text-md-left">
                 <div class="row justify-content-lg-between align-items-center row-30 flex-column-reverse flex-md-row">
                     <div class="col-lg-5 col-md-6">
-                        <h2 class="wow fadeInLeft grad-text animate__animated animate__fadeInLeft animate__slower">What is Teledentistry</h2>
-                        <div class="primary-subtitle wow animate__animated animate__fadeInLeft animate__slower">"We make your smile more perfect, brighter and broader to the world"</div>
-                        <p class="wow animate__animated animate__fadeInLeft animate__slower">We are a competent team of dentists who completely understand the importance of quality dental in a busy life. Our practice is based on high standards and new technologies which reflect on beautiful and healthy smiles of
-                            our clients.</p>
+                        <h2 class="wow fadeInLeft grad-text animate__animated animate__fadeInLeft animate__slower">What is Teledentistry?</h2>
+                        <!-- <div class="primary-subtitle wow animate__animated animate__fadeInLeft animate__slower">"We make your smile more perfect, brighter and broader to the world"</div> -->
+                        <p class="wow animate__animated animate__fadeInLeft animate__slower">Dental care is being constantly transformed by the opportunities which are provided by
+                            technology and telecommunications. It aims to provide patients, with a broad range of solutions
+                            that they can receive from a distance.</p>
+                        <p class="wow animate__animated animate__fadeInLeft animate__slower">Our online consultation can help you gain a clearer idea of what your dental issues are, and
+                            what treatment may be right for you, from the team of highly qualified certified dentist at
+                            anytime from anywhere.</p>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="block-xs wow animate__animated animate__fadeInRight animate__slower "><img src="assets/img/tela.png" alt="" class="img-fluid">
@@ -49,12 +53,17 @@
                             <li class="wow ">Improve the oral and teeth health</li>
                             <li class="wow ">Ensure a happy smile of clients</li>
                             <li class="wow ">Provide quality services to every client</li>
+                            <li class="wow ">Get a Second Opinion</li>
                         </ul>
                     </div>
                     <div class="col-lg-5">
                         <h2 class="wow animate__animated animate__fadeInUpBig animate__slower animate__delay-3s 3s grad-text">How It works</h2>
-                        <p class="wow animate__animated animate__fadeInUpBig animate__slower animate__delay-3s 3s offset-xl-20">We are carrying out not only treatments, we also diagnose your potential problems with the teeth to be sure you don't experience any distressing.</p>
-                        <p class="wow animate__animated animate__fadeInUpBig animate__slower animate__delay-3s 3s">The best helper in our approach is the team of quality dentists and highest medical technologies.</p>
+                        <p class="wow animate__animated animate__fadeInUpBig animate__slower animate__delay-3s 3s offset-xl-20">Teladent provides and empowers virtual oral care services, to every individual’s health journey.
+                            It helps you with improved access to oral healthcare, and improve the delivery of it, from
+                            prevention to acute care to complex oral care needs.</p>
+                        <p class="wow animate__animated animate__fadeInUpBig animate__slower animate__delay-3s 3s">We us personalized interactions with
+                            highly qualified registered professionals to deliver the best preventive oral care and drive better
+                            oral health outcomes.</p>
                     </div>
                 </div>
             </div>
@@ -73,10 +82,12 @@
                                 <div class="frontside">
                                     <div class="card">
                                         <div class="card-body text-center">
-                                            <p><img class=" img-fluid" src="assets/img/team/t1.jpg" alt="card image"></p>
-                                            <h4 class="card-title grad-text">Sunlimetech</h4>
-                                            <p class="card-text">This is basic card with image on top, title, description and button.</p>
-
+                                            <p><img class=" img-fluid" src="assets/img/team/t2.jpg" alt="card image"></p>
+                                            <h4 class="card-title grad-text">Dr. Pearl Jaggi</h4>
+                                            <p class="card-text">B.D.S., M.D.S.</p>
+                                            <p class="card-text">Pediatric and Preventive Dentist</p>
+                                            <p class="card-text">Patient Relationship Manager</p>
+                                            
                                         </div>
                                     </div>
                                 </div>
@@ -122,8 +133,10 @@
                                     <div class="card">
                                         <div class="card-body text-center">
                                             <p><img class=" img-fluid" src="assets/img/team/t2.jpg" alt="card image"></p>
-                                            <h4 class="card-title grad-text">Sunlimetech</h4>
-                                            <p class="card-text">This is basic card with image on top, title, description and button.</p>
+                                            <h4 class="card-title grad-text">Dr. Sumedha Baghel</h4>
+                                            <p class="card-text">B.D.S., M.D.S., Ph.D</p>
+                                            <p class="card-text">Pediatric and Preventive Dentist</p>
+                                            <p class="card-text">Public Health Manager</p>
 
                                         </div>
                                     </div>
@@ -163,7 +176,7 @@
                     </div>
                     <!-- ./Team member -->
                     <!-- Team member -->
-                    <div class="col-xs-12 col-sm-6 col-md-4">
+                    <!-- <div class="col-xs-12 col-sm-6 col-md-4">
                         <div class="image-flip animate__animated animate__fadeInLeft animate__slower animate__delay-5s 5s">
                             <div class="mainflip flip-0">
                                 <div class="frontside">
@@ -208,7 +221,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- ./Team member -->
 
 
@@ -225,9 +238,12 @@
                         <p class="wow animate__animated animate__fadeInLeft animate__slower  animate__delay-5s 5s ">Let our team handle all your dental healthcare issues.</p>
                         <p class="wow  text-secondary text-md font-weight-regular animate__animated animate__fadeInLeft animate__slower  animate__delay-5s 5s">Free Consultation from Our Expert Advisors</p>
                         <a class="wow  text-xxl font-weight-bold animate__animated animate__fadeInRight animate__slower  animate__delay-5s 5s" href="tel:#">
-                            <h2> +1 3153695943</h2>
+                            <h2> +91 9899799981</h2>
                         </a>
-                        <a class="wow animate__animated animate__fadeInUp animate__slower  button button-primary button-shadow button-md button-xxl btn-grad  animate__delay-5s 5s" href="#">Request a Callback | Book An Appointment</a>
+                        <div class="row">
+                            <a class="wow animate__animated animate__fadeInUp animate__slower  button button-primary button-shadow button-md button-xxl btn-grad  animate__delay-5s 5s" href="javascript:void(0);">Request a Callback</a>
+                            <a class="wow animate__animated animate__fadeInUp animate__slower  button button-primary button-shadow button-md button-xxl btn-grad  animate__delay-5s 5s" routerLink="/online-consultation" [queryParams]="{limit: 10, skip: 0 }">Book An Appointment</a>
+                        </div>
                     </div>
                 </div>
             </div>
