update header routing

--- a/src/app/module/index/index.component.html
+++ b/src/app/module/index/index.component.html
@@ -567,7 +567,7 @@
                             </div>
                         </div>
                         <div class="view-all text-center">
-                            <a href="#" class="btn btn-info">View All</a>
+                            <a href="javsacript:void(0);" (click)="viewBlogRoute()" class="btn btn-info">View All</a>
                         </div>
                     </div>
                 </section>
