--- a/src/app/module/index/index.component.html
+++ b/src/app/module/index/index.component.html
@@ -626,7 +626,7 @@
                                                 <input type="email" name="email" placeholder="Enter Your Email Address">
                                             </div>
                                             <div>
-                                                <input class="btn-grad" type="submit" value="subscribe">
+                                                <input class="btn btn-grad" type="button" value="subscribe">
                                             </div>
                                         </div>
                                     </form>
